Z-index fix in sidebar

--- a/src/scss/components/_sidebar.scss
+++ b/src/scss/components/_sidebar.scss
@@ -2,7 +2,7 @@
 
 .sidebar {
   display: flex;
-  z-index: 10;
+  z-index: 1;
   position: fixed;
   top: 0;
   flex-direction: column;
